--- a/cs4760progassign/build.gradle
+++ b/cs4760progassign/build.gradle
@@ -26,6 +26,9 @@ repositories {
 }
 
 dependencies {
+    compile 'org.grails.plugins:spring-security-core:3.3.1'
+    compile 'org.grails.plugins:spring-security-ui:4.0.0.M1'
+    compile 'org.grails.plugins:mail:2.0.0'
     compile "org.springframework.boot:spring-boot-starter-logging"
     compile "org.springframework.boot:spring-boot-autoconfigure"
     compile "org.grails:grails-core"
